// Copyright 2021 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package recipe_modules.build.chromium_3pp;

message PreprocessStep {
  // The name of the preprocess
  string name = 1;

  // The preprocess arguments to run for the preprocess. It accepts a
  // placeholder "{CHECKOUT}" which will be later on replaced by the actual
  // checkout path. For example, ['{CHECKOUT}/src/foo/bar.py', '-v']
  repeated string cmd = 2;
}

message InputProperties {
  // A prefix to the CIPD package name, for all 3pp packages.
  string package_prefix = 1;

  // Target platform. Must be a valid CIPD ${platform}.
  // See https://bit.ly/2Lp67iE for details.
  string platform = 2;

  // Force building the package, but do not upload to CIPD (copied from the
  // recipe 3pp.py in "infra/infra" repo).
  // This is forced to true when ran by trybots.
  bool force_build = 3;

  // A explicit list of package paths to be built. If empty, all known package
  // paths will be built.
  //
  // Package paths are src-relative paths to the folder(s) that contain the
  // file "3pp/3pp.pb". For example, the package path is "third_party/guava"
  // for a directory like:
  //
  //   - third_party/
  //     - guava/
  //       - 3pp/
  //         - 3pp.pb
  //         - install.sh
  //
  // Could also be a glob pattern like "third_party/android_deps/**" which scans
  // all the subdirectories under third_party/android_deps.
  //
  // Note that in tryjobs, package paths from the CLs will be added to
  // this list, if there were any.
  repeated string package_paths_to_build = 4;

  // A list of preprocess to run before processing 3pp packages.
  repeated PreprocessStep preprocess = 5;

  // The config to set for "gclient" recipe module.
  string gclient_config = 6;

  // A list of config to apply for "gclient" recipe module.
  repeated string gclient_apply_config = 7;

  // Override of src path for testing locally.
  string local_checkout_dir = 8;
}

